--- a/land page/land.html
+++ b/land page/land.html
@@ -1,1 +1,28 @@
-
+<HTML>
+  <HEAD>
+    <TITLE> Digian HomePage - Markenting Digital </TITLE>
+  </HEAD>
+  <BODY>
+    <SECTION NAME="Inicio" ID="Ini">
+      <DIV CLASS=Inicio"> <!-- Containert Inicio -->
+        <DIV CLASS="logo"> Digian </DIV>
+        <DIV CLASS="nav">
+          <BUTTON> INICIO </BUTTON>
+          <BUTTON> SOBRE NÓS </BUTTON>
+          <BUTTON> SERVIÇOS </BUTTON>
+          <BUTTON> CONTATOS </BUTTON>
+        </DIV>
+          <DIV CLASS="faq"> <BUTTON> FAQ </BUTTON> </DIV>
+          <DIV CLASS="imginicio">
+            <IMG SRC="slider.png" width="200" height="350" id="slider">
+          </DIV>
+        <DIV CLASS="textoinicio">
+          <H2> Conheça a Digian </H2>
+          <P> Somos especializados em Markenting Digital
+            <BR>
+            Com um Conjunto de Ferramentas e estratégias
+            <BR>
+            Que vão Potencializar a sua marca na Web.
+          </P></DIV></DIV></SECTION>
+  </BODY>
+</HTML>
